--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <a href="https://wa.me/5534987001492" class="float" target="_blank">
+        <i class="fa fa-whatsapp my-float"></i>
+    </a>
 
     <title>Ana Paula Zantut - Advocacia</title>
     <meta
@@ -325,9 +329,7 @@
             <!-- ======= Testimonials Section ======= -->
             <section id="testimonials" class="testimonials">
                 <div class="container" data-aos="zoom-in">
-                    <h1>
-                        <h1><i class="bi bi-google"></i></h1>
-                    </h1>
+
 
                     <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
                         <div class="swiper-wrapper">
@@ -382,11 +384,11 @@
                                     <h4 style="color: gold;"><i class="bi bi-star-fill"></i><i
                                             class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
                                             class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></h4>
-
-                                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                                    Excelente profissional, sempre atenta aos detalhes de cada cliente e com muita
-                                    dedicação.
-                                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                                    <p style="text-align: center;">
+                                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                                        Excelente profissional, sempre atenta aos detalhes de cada cliente e com muita
+                                        dedicação.
+                                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                                     </p>
                                 </div>
 
@@ -397,16 +399,15 @@
                                     <h4 style="color: gold;"><i class="bi bi-star-fill"></i><i
                                             class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
                                             class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></h4>
-
-                                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                                    Fui muito bem orientada pela advogada Ana Paula. Ela me deu todo suporte e me ajudou
-                                    muito em todas as etapas do processo que abri. Tudo de forma online, organizada e
-                                    segura. Super indico!
-                                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                                    <p style="text-align: center;">
+                                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                                        Fui muito bem orientada pela advogada Ana Paula. Ela me deu todo suporte e me
+                                        ajudou
+                                        muito em todas as etapas do processo que abri. Tudo de forma online, organizada
+                                        e
+                                        segura. Super indico!
+                                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                                     </p>
-                                    <h1>
-                                        <h1><i class="bi bi-google"></i></h1>
-                                    </h1>
 
                                 </div>
                             </div><!-- End testimonial item -->
@@ -419,7 +420,7 @@
                                     <h4 style="color: gold;"><i class="bi bi-star-fill"></i><i
                                             class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
                                             class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></h4>
-                                    <p>
+                                    <p style="text-align: center;">
                                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                                         Atendimento personalizado e especializado! Cinseguiu esclarecer todas as minhas
                                         dúvidas e me deixou bem tranquilo em relação ao problema que estava tendo, super
@@ -436,7 +437,7 @@
                                         <h4 style="color: gold;"><i class="bi bi-star-fill"></i><i
                                                 class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i
                                                 class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></h4>
-                                        <p>
+                                        <p style="text-align: center;">
                                             <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                                             Muito competente e atenciosa. O diferencial de aconselhamento jurídico fez
                                             toda diferença pois além de tratar da causa em si trouxe muita segurança.
@@ -509,6 +510,10 @@
                             </div><!-- End testimonial item -->
                         </div>
                         <div class="swiper-pagination"></div>
+
+                        <h1><i class="bi bi-google"></i></h1>
+
+
                     </div>
 
                 </div>
