--- a/index.html
+++ b/index.html
@@ -102,12 +102,13 @@
                 </div>
             </div>
 
-            <div class="row justify-content-center mt-5" data-aos="zoom-in" data-aos-delay="250">
-                <div class="col-xl-2 col-md-6 d-flex justify-content-center">
+            <div data-aos="zoom-in" data-aos-delay="250">
+                <div id="divdozap" style="display: flex;">
                     <a href="https://wa.me/5534987001492" target="_blank">
                         <button class="zap">
-                            <span id="zaptext">Entre em contato</span>
-                            <i class="bi bi-whatsapp"></i>
+                            <span id="zaptext">Entre em contato </span>
+                            <i style="font-size: 40px;" class="bi bi-whatsapp"></i>
+
                         </button> </a>
 
                 </div>
@@ -331,11 +332,16 @@
                 <div class="container" data-aos="zoom-in">
 
 
+
                     <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
                         <div class="swiper-wrapper">
 
                             <div class="swiper-slide">
                                 <div class="testimonial-item">
+                                    <h1>Nossas avaliações no <span style="color: #4285F4;">G</span><span
+                                            style="color: #EA4335;">o</span><span style="color: #FBBC05;">o</span><span
+                                            style="color: #4285F4;">g</span><span style="color: #34A853;">l</span><span
+                                            style="color: #EA4335;">e</span></h1>
                                     <img src="https://lh3.googleusercontent.com/a-/ALV-UjV221bifBK_YBX8nCXipLUBYnHQzpHy8Gxomdo0wIO7hg=w60-h60-p-rp-mo-br100"
                                         class="testimonial-img" alt="">
                                     <h3>Nathalia Moraes</h3>
@@ -378,6 +384,7 @@
 
                             <div class="swiper-slide">
                                 <div class="testimonial-item">
+                                    <h1>Nossas avaliações no Google</h1>
                                     <img src="https://lh3.googleusercontent.com/a-/ALV-UjX8Ff5TCMuYVcugCHdKmHQA6ISJ9lAhwBQTgTYxiW5tn9I=w60-h60-p-rp-mo-br100"
                                         class="testimonial-img" alt="">
                                     <h3>Matheus Adan</h3>
