--- a/artigo.html
+++ b/artigo.html
@@ -209,6 +209,77 @@ artigos
                         </div>
                     </div>
 
+                    <!-- comecei aqui -->
+                    <br>
+                    <div class="col-md-4">
+                        <div class="card text-center mx-auto mb-3"
+                            style="width: 18rem; height: 100%; display: flex; flex-direction: column;">
+                            <div class="card text-center mx-auto" style="width: 18rem;">
+                                <img src="https://images.pexels.com/photos/7114344/pexels-photo-7114344.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+                                    class="card-img-top" alt="...">
+                                <div class="card-body" style="flex-grow: 1;">
+                                    <h5 class="card-title">Você sabia que o condomínio pode proibir a locação do Airbnb?</h5>
+                                    <p class="card-text">Há algum tempo, discute-se a locação de imóveis por meio de plataformas digitais, como o Airbnb, e vez ou outra, esse assunto volta à tona,</p>
+                                </div>
+                                <div class="card-footer mt-auto">
+                                    <a href="texto1.html#artigo" class="btn btn-primary">Ler Artigo</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="col-md-4">
+                        <div class="card text-center mx-auto mb-3"
+                            style="width: 18rem; height: 100%; display: flex; flex-direction: column;">
+                            <div class="card text-center mx-auto" style="width: 18rem;">
+                                <img src="https://images.pexels.com/photos/8293700/pexels-photo-8293700.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+                                    class="card-img-top" alt="...">
+                                <div class="card-body" style="flex-grow: 1;">
+                                    <h5 class="card-title">Quem não registra a escritura do imóvel não é dono.</h5>
+                                    <p class="card-text">É muito comum as pessoas acreditarem que por ter a escritura em mãos já garantiu a propriedade do imóvel e é o dono, contudo isso não é verdade.</p>
+                                </div>
+                                <div class="card-footer mt-auto">
+                                    <a href="texto1.html#artigo" class="btn btn-primary">Ler Artigo</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card text-center mx-auto mb-3"
+                            style="width: 18rem; height: 100%; display: flex; flex-direction: column;">
+                            <div class="card text-center mx-auto" style="width: 18rem;">
+                                <img src="https://images.pexels.com/photos/4098224/pexels-photo-4098224.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+                                    class="card-img-top" alt="...">
+                                <div class="card-body" style="flex-grow: 1;">
+                                    <h5 class="card-title">Afinal o que alterou no regime da separação obrigatória de bens?</h5>
+                                    <p class="card-text">No dia 01 de fevereiro, o STF proferiu uma decisão polêmica no âmbito dos regimes de bens.</p>
+                                </div>
+                                <div class="card-footer mt-auto">
+                                    <a href="texto1.html#artigo" class="btn btn-primary">Ler Artigo</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card text-center mx-auto mb-3"
+                            style="width: 18rem; height: 100%; display: flex; flex-direction: column;">
+                            <div class="card text-center mx-auto" style="width: 18rem;">
+                                <img src="https://images.unsplash.com/photo-1678818715417-3c725d9c2b43?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                                    class="card-img-top" alt="...">
+                                <div class="card-body" style="flex-grow: 1;">
+                                    <h5 class="card-title">Sou fiador, posso perder minha casa?</h5>
+                                    <p class="card-text">O fiador pode sim ter seu imóvel penhorado decorrente de dívidas de contrato de locação.</p>
+                                </div>
+                                <div class="card-footer mt-auto">
+                                    <a href="texto1.html#artigo" class="btn btn-primary">Ler Artigo</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
         </div>
